2005-07-06 Parick Galbraith <patg@mysql.com> (3.0001_2)
  * Fixed runtime bug (when inserting or updating quotes or double quotes)
    (Thanks to Brad Choate)

2005-07-04 Parick Galbraith <patg@mysql.com> (3.0001_1)
  * Changed uint argument in safe_sv_fetch to int due to 
    uint not being available on windows unless you include
    my_globals.h in dbdimp.h, which also breaks on unixen!
  * Removed // comments from mysql.xs (thanks Bodo Bergman!)

2005-07-03 Patrick Galbraith <patg@mysql.com> (3.0000_0)
  * Special Thanks to Steve Hay for his patch to fix windows 
  * Fixed Makefile.PM for windows compiles
  * Removed long long type from dbdimp.h
  * Changed strncasecmp to strncmp (still need a better long-term solution)
    in dbdimp.c
  * Modified Makefile.PM to make prepared statements on by default

2005-04-26 Patrick Galbraith <patg@mysql.com> (2.9015_3)
  * Added patch from Stas Beckman for new DBI feature take_imp_data, needed
   for DBI::Pool
  * Fix to Statement.pm for old API call for numfields that caused
    warnings on 40numrows and akmisc tests
  * Fix to bind_ph to throw an error if trying to bind a non-numeric 
    value as numeric
  * Better fix for dealing with error condition in $sth->rows()
  * Fix to bind_param to throw error when trying to bind a non-numeric as
    numeric


2005-04-04 Patrick Galbraith <patg@mysql.com> (2.9015_2)
  * Merged all code changes from 2.900x tree from the last 9 
    months
    - unsafe bind type guessing patch from Dragonchild
    - Removed mysql.mtest
    - Fixed sth->rows to return my_ulongloong and also handle
      error from client API
    - Fix to make autocommit work was already part of this version
    - Auto-reconnect bug fixed in 2.9006 included 
  * Added simple test to 35limit test to check if using malicious code in
   LIMIT ?, ? placeholders works, which it doesn't.
  * Fix that sets mysql_server_prepare to 0 if SQL statement is 'SHOW ...'