@@ -1,6 +1,6 @@
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBD-mysql
-version:      3.0001_2
+version:      3.0001_3
 version_from: lib/DBD/mysql.pm
 installdirs:  site
 requires:
