@@ -8,7 +8,7 @@
  *  You may distribute this under the terms of either the GNU General Public
  *  License or the Artistic License, as specified in the Perl README file.
  *
- *  $Id: dbdimp.c 1385 2005-07-07 00:30:13Z capttofu $
+ *  $Id: dbdimp.c 1398 2005-07-07 21:23:48Z capttofu $
  */
 
 
@@ -2772,7 +2772,9 @@ dbd_st_fetch(SV *sth, imp_sth_t* imp_sth)
   unsigned long *lengths;
   int rc;
   imp_sth_fbh_t *fbh;
+#if MYSQL_VERSION_ID >=SERVER_PREPARE_VERSION
   MYSQL_BIND *bind;
+#endif
   D_imp_dbh_from_sth;
 
 #if MYSQL_VERSION_ID >=SERVER_PREPARE_VERSION
