@@ -1,6 +1,10 @@
+2005-07-06 Parick Galbraith <patg@mysql.com> (3.0001_3)
+  * Fix to ensure MYSQL_BIND is only defined when mysql
+    client version is >= 4.1.3. Thanks to Tom Parkison
+
 2005-07-06 Parick Galbraith <patg@mysql.com> (3.0001_2)
   * Fixed runtime bug (when inserting or updating quotes or double quotes)
-    (Thanks to Brad Choate)
+    (Thanks to Brad Choate, Six Apart Ltd.)
 
 2005-07-04 Parick Galbraith <patg@mysql.com> (3.0001_1)
   * Changed uint argument in safe_sv_fetch to int due to 
@@ -816,7 +820,7 @@ Fri Oct 24 01:29:08 1997  Jochen Wiedmann  <joe@ispsoft.de> (1.1816)
 	* lib/Msql/Statement.pm: Fixed use of Msql::TEXT_TYPE without
 	  checking whether we are running Msql 1.
 
-$Id: ChangeLog 1388 2005-07-07 00:50:30Z capttofu $
+$Id: ChangeLog 1398 2005-07-07 21:23:48Z capttofu $
 
 DBD::mysql for DBI - Written by Jochen Wiedmann <joe@ispsoft.de>
 
